# household-task-manager

./: .gitignore  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  nginx.conf
.github/workflows/: build-and-push.yml
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 000_initial_schema.py  0bcb13197448_add_refresh_token_model.py  48f7545bac46_add_cascade_delete_to_tasks_and_project_.py  51fc0a40ff2c_change_task_execution_model.py  836edf82ba10_change_schema.py  aaafbf42ef8f_change_schema.py  aea86086d0d9_remove_project_id_from_taskexecution_.py  bce682963ea2_add_cascade_delete_to_task_executions.py  c8bb7708cfe3_add_description_column_to_project_model.py
backend/app/: database.py  main.py  models.py  schemas.py  settings.py  utils.py
backend/app/routers/: auth.py  due_tasks.py  executions.py  project_members.py  projects.py  tasks.py  tasks_executions.py  users.py
backend/scripts/: connect_test.py
docs/: deployment-guide.md
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx  routes.tsx
frontend/src/components/Accounts/: Account.tsx
frontend/src/components/Atoms/: AppTitle.tsx  Button.tsx  DeleteButton.tsx  EditButton.tsx  ErrorBoundary.tsx  Icon.tsx  Logo.tsx  Table.tsx  TableCell.tsx  TableHeaderCell.tsx  TableRow.tsx
frontend/src/components/Auth/: Login.tsx  Register.tsx
frontend/src/components/DueTasks/: DueTaskList.tsx
frontend/src/components/Molecules/: IconButton.tsx  LogoWithTitle.tsx  NavLinkItem.tsx  ProjectRow.tsx  TabBarItem.tsx  UserSelect.tsx
frontend/src/components/Organisms/: MenuModal.tsx  NavBar.tsx  ProjectMemberList.tsx  ProjectModal.tsx  ProjectTable.tsx  TabBar.tsx  TableComponent.tsx
frontend/src/components/Pages/Accounts/: Account.tsx
frontend/src/components/Pages/Auth/: Login.tsx  Register.tsx
frontend/src/components/Pages/DueTasks/: DueTaskList.tsx
frontend/src/components/Pages/Projects/: ProjectCreate.tsx  ProjectEdit.tsx  ProjectList.tsx
frontend/src/components/Pages/TaskExecutionCharts/: TaskExecutionChart.tsx
frontend/src/components/Pages/TaskExecutions/: TaskExecutionEdit.tsx  TaskExecutionList.tsx
frontend/src/components/Pages/Tasks/: TaskCreate.tsx  TaskEdit.tsx  TaskList.tsx
frontend/src/components/ProjectMembers/: ProjectMemberList.tsx  UserSelect.tsx
frontend/src/components/Projects/: ProjectCreate.tsx  ProjectEdit.tsx  ProjectList.tsx
frontend/src/components/TaskExecutions/: TaskExecutionEdit.tsx  TaskExecutionList.tsx
frontend/src/components/Tasks/: TaskCreate.tsx  TaskEdit.tsx  TaskList.tsx
frontend/src/components/Templates/: Header.tsx  Layout.tsx  Logo.tsx  MenuModal.tsx  ProjectModal.tsx
frontend/src/components/UI/: EditButton.tsx  ErrorMessage.tsx  LoadingSpinner.tsx
frontend/src/hooks/: useProjectForm.ts  useProjectMemberForm.ts  useProjects.ts  useResponsiveIconSize.ts  useTaskExecutionForm.ts  useTaskExecutions.ts  useTaskForm.ts  useTasks.ts
frontend/src/services/: api.ts  projectMemberApi.ts  userApi.ts
frontend/src/types/: atoms.ts  index.ts
frontend/src/utils/: PrivateRoute.tsx  auth.ts  exchangeTimeZoneDate.ts
scripts/: gemini-review.sh
